add reset function

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <span class="counter-value">0</span> 
             <span class="decrement">-</span>
         </div>
+        <button class="reset">Reset</button>
     </main>
     
 
